fixed: Temp fix the image scaling on smaller devices

--- a/src/app/(pages)/about/styles.module.scss
+++ b/src/app/(pages)/about/styles.module.scss
@@ -3,6 +3,8 @@
   padding: 0 4rem;
 
   min-height: 400vh;
+
+  width: 100%;
 }
 
 .title {
@@ -16,10 +18,15 @@
 .content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  width: 100%;
   height: 100rem;
 
+  @media (max-width: 600px) {
+    grid-template-columns: 1fr;
+    height: auto;
+  }
+
   .text {
-    width: 50rem;
     text-align: justify;
   }
 
@@ -27,12 +34,22 @@
     font-size: 1.6rem;
     line-height: 2.4rem;
   }
+
+  .image {
+    @media (max-width: 600px) {
+      margin-bottom: 2rem;
+      grid-row: 1 / 2;
+    }
+  }
 }
 
 .image-container {
   display: block;
   margin: 0 auto;
-  width: 95%;
   height: 1100px; /* Set whatever height you want */
   overflow: hidden;
+
+  @media (max-width: 600px) {
+    height: 500px; /* Set whatever height you want */
+  }
 }
